[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
csv = "1.1"
chrono = "0.4"
tempfile = "3.3"
fh5-common = { path = "fh5-common", version="0.1" }